fixed jumping ID'd related to fixed banner.

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -19,8 +19,8 @@ $hero-p-color:#444;
 *[id]:before {
   display: block;
   content: " ";
-  margin-top: -175px;
-  height: 175px;
+  margin-top: -200px;
+  height: 200px;
   visibility: hidden;
 }
 
@@ -89,7 +89,8 @@ h1, h2 {
   &.title {
   text-transform: uppercase;
   text-align:center;
-  padding:40px 0 10px;
+  margin-top:40px;
+  padding:0 0 10px;
   }
 }
 h1.title {
@@ -244,7 +245,7 @@ ul.reqs {
   li:last-child {border-bottom:0;}
 }
 section.faq {
-  h2.side-nav-title {padding-top:40px;margin-top:0}
+  h2.side-nav-title {padding-top:40px;margin-top:0px}
   .side-nav {
     width:360px;
     &.affix {top:0}
@@ -257,7 +258,8 @@ section.faq {
   li {
     font-family: 'Gill Sans Light', 'Gill Sans MT Light', Lato, Helvetica, Arial, sans-serif;
     font-weight:300;
-    padding:40px 0;
+    margin-top:40px;
+    padding: 0 40px 40px 40px;
     border-bottom:1px solid #ccc;
     a {margin-left:5px;}
   }
@@ -276,6 +278,7 @@ section.faq {
   ul.faq-nav {
     position:relative;
     li {
+      margin-top:0px;
       padding:0;
       font-size:$base-font-size*0.9;
       line-height:1.25em;
